--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.9",
+    "@angular-devkit/build-angular": "^12.2.14",
     "@angular/cli": "^12.2.13",
     "@angular/compiler-cli": "~12.2.13",
     "@types/jasmine": "~3.8.0",
