--- a/package.json
+++ b/package.json
@@ -22,28 +22,35 @@
     "@angular/router": "~12.2.13",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "file-loader": "^6.2.0",
     "leaflet": "^1.7.1",
     "ngx-markdown": "^12.0.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.3.0",
     "tslib": "^2.3.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.58.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.14",
     "@angular/cli": "^12.2.13",
     "@angular/compiler-cli": "~12.2.13",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "@types/jasmine": "~3.8.0",
     "@types/leaflet": "^1.7.5",
     "@types/node": "^12.11.1",
+    "babel-loader": "^8.0.5",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "^4.3.5"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.3.5",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.1.14"
   }
 }
